--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer base{
+ section{
+    @apply py-[75px]
+ }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+    .container {
+        @apply max-w-full w-[1440px] px-5 mx-auto
+    }
+    .btn{
+        @apply bg-primarycolor py-[15px] px-[35px] rounded-[50px] text-white font-[600] mt-[38px]
+    }
+    .heading{
+        @apply text-[44px] leading-[54px] font-[700] text-headingcolor
+    }
+    .text__para{
+        @apply text-[18px] leading-[30px] font-[400] text-textcolor mt-[18px] 
+    }
+}
+@media only screen and (max-width: 768px){
+    .container {
+        @apply w-full;
+    }
 }
