--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,19 +11,23 @@
 
 @layer components{
     .container {
-        @apply max-w-full w-[1440px] px-5 mx-auto
+        @apply max-w-full w-[1440px] px-5 mx-auto;
     }
     .btn{
-        @apply bg-primarycolor py-[15px] px-[35px] rounded-[50px] text-white font-[600] mt-[38px]
+        @apply bg-primarycolor py-[15px] px-[35px] rounded-[50px] text-white font-[600] mt-[38px];
     }
     .heading{
-        @apply text-[44px] leading-[54px] font-[700] text-headingcolor
+        @apply text-[44px] leading-[54px] font-[700] text-headingcolor;
     }
     .text__para{
-        @apply text-[18px] leading-[30px] font-[400] text-textcolor mt-[18px] 
+        @apply text-[18px] leading-[30px] font-[400] text-textcolor mt-[18px];
+    }
+
+    .header{
+        @apply bg-[url('./assets/data/images/mask.png')] bg-no-repeat bg-center bg-cover w-full h-[100px] leading-[100px];
     }
 }
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 1024px){
     .container {
         @apply w-full;
     }
